<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <GVL Name="CYL_CmdState" Id="{2e52c957-3e85-4a1c-809b-c60393e68954}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	///ctrl commands definitions
	///specific commands >200 - every command has to be a even number
	cCMD_RETRACT: INT := 202;
	cCMD_EXTEND: INT := 204;
	///ctrl specific states definitions
	cSTA_RETRACTBusy: INT := 201;
	cSTA_RETRACT: INT := cCMD_RETRACT;
	cSTA_EXTENDBusy: INT := 203;
	cSTA_EXTEND: INT := cCMD_EXTEND;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>