<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_MOD_Cur" Id="{10e84f81-c7bf-451a-b2ad-c994b2dc54f2}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_MOD_Cur :
STRUCT
	///[ms] time last cycle
	udiCycleTime_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>